# sorensen_dice_coeff_py

./: Cargo.toml  readme.md  sdcoeff.pyd
src/: lib.rs
