[package]
name = "sdcoeff"
version = "0.1.0"
authors = ["nebelgrau <nebelgrau@gmx.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
name = "sdcoeff"
crate-type = ["cdylib"]

[dependencies]
pyo3 = {version = "0.11", features = ["extension-module"]}